[tool.poetry]
name = "rki-wrap"
version = "0.1.0"
description = ""
authors = ["Paul Gessinger <hello@paulgessinger.com>"]
packages = [
    { include = "rki_wrap", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.2"
python-dotenv = "^0.19.2"
pandas = "^1.3.4"
Flask-SQLAlchemy = "^2.5.1"
Flask-Migrate = "^3.1.0"
requests = "^2.26.0"
psycopg2-binary = "^2.9.2"
openpyxl = "^3.0.9"

[tool.poetry.dev-dependencies]
black = {version = "^21.11b1", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
